test/files/neg/t4460b.scala
trait A

class Outer() {
	class B(val x: Int) {
	  self: A =>

	  def this() = this() // was binding to Predef.<init> !!
	}
}
