test/files/neg/t4460b.check
t4460b.scala:7: error: called constructor's definition must precede calling constructor's definition
	  def this() = this() // was binding to Predef.<init> !!
                       ^
one error found
